explore freelancer page done

--- a/business/03-my-projects/my-project-page.html
+++ b/business/03-my-projects/my-project-page.html
@@ -2652,6 +2652,7 @@ bdb = business dashboard;
       </div>
     </div>
 
+    <!-- modal 2  -->
     <div
       class="modal fade"
       id="createProjectModal2"
