this is project page done

--- a/business/08-project-started/project-started-confirm-deposit-page.html
+++ b/business/08-project-started/project-started-confirm-deposit-page.html
@@ -928,7 +928,7 @@ bdb = business dashboard;
                 </p>
                 <div class="card border border-light-subtle p-3 rounded-3">
                   <div class="row">
-                    <div class="col col-sm-6 d-flex flex-column gap-5">
+                    <div class="col-12 col-md-6 d-flex flex-column gap-5">
                       <div class="d-flex flex-column gap-1 align-items-start">
                         <p>Bill to</p>
                         <h3>Alt Tribe</h3>
@@ -947,7 +947,7 @@ bdb = business dashboard;
                         <h3>Hiring John for Poster Designing</h3>
                       </div>
                     </div>
-                    <div class="col col-sm-6 d-flex flex-column gap-5">
+                    <div class="col-12 col-md-6 d-flex flex-column gap-5">
                       <div class="d-flex flex-column gap-1 align-items-start">
                         <p>Invoice</p>
                         <h3>DEP - AT- 365353</h3>
@@ -961,7 +961,7 @@ bdb = business dashboard;
                         <h3>USD</h3>
                       </div>
                     </div>
-                    <div class="col col-12">
+                    <div class="col-12 mt-5">
                       <h3>
                         Want to learn more about payments?
                         <a href="" class="text-black text-decoration-underline">
