--- a/business/03-my-projects/my-project-page.html
+++ b/business/03-my-projects/my-project-page.html
@@ -389,7 +389,7 @@ bdb = business dashboard;
               </a>
             </li>
             <!--  -->
-            <li class="py-2">
+            <li class="py-2 active">
               <a
                 href="/#"
                 class="d-flex align-items-center justify-content-start gap-2"
@@ -950,7 +950,7 @@ bdb = business dashboard;
                   </a>
                 </li>
                 <!--  -->
-                <li class="py-2">
+                <li class="py-2 active">
                   <a
                     href="/#"
                     class="d-flex align-items-center justify-content-start gap-2"
