--- a/business/04-explore-freelancers/business-explore-freelancers-page.html
+++ b/business/04-explore-freelancers/business-explore-freelancers-page.html
@@ -932,7 +932,7 @@ bdb = business dashboard;
                   </a>
                 </li>
                 <!--  -->
-                <li class="py-2">
+                <li class="py-2 active">
                   <a
                     href="/#"
                     class="d-flex align-items-center justify-content-start gap-2"
