--- a/business/05-community/business-community-feeds-page.html
+++ b/business/05-community/business-community-feeds-page.html
@@ -992,7 +992,7 @@ bdb = business dashboard;
                   </a>
                 </li>
                 <!--  -->
-                <li class="py-2">
+                <li class="py-2 active">
                   <a
                     href="/#"
                     class="d-flex align-items-center justify-content-start gap-2"
