explore project updated

--- a/freelancer/03-explore-project/freelance-explore-project-page.html
+++ b/freelancer/03-explore-project/freelance-explore-project-page.html
@@ -99,7 +99,7 @@ bdb = business dashboard;
           <div class="col-lg-7 pt-3 pt-lg-0">
             <div class="breadcrumb d-flex ps-2 mt-1 align-items-center">
               <a href="" class="fs-6">
-                <span class="m-1 fs-5"><strong>My projects</strong></span>
+                <span class="m-1 fs-5"><strong>Explore Projects</strong></span>
               </a>
             </div>
           </div>
@@ -934,7 +934,7 @@ bdb = business dashboard;
                   </a>
                 </li>
                 <!--  -->
-                <li class="py-2">
+                <li class="py-2 active">
                   <a
                     href="/#"
                     class="d-flex align-items-center justify-content-start gap-2"
@@ -945,11 +945,11 @@ bdb = business dashboard;
                         alt="dashboard icon"
                       />
                     </div>
-                    <span>Explore Freelancers</span>
+                    <span>Explore Projects</span>
                   </a>
                 </li>
                 <!--  -->
-                <li class="py-2 active">
+                <li class="py-2">
                   <a
                     href="/#"
                     class="d-flex align-items-center justify-content-start gap-2"
@@ -960,7 +960,7 @@ bdb = business dashboard;
                         alt="dashboard icon"
                       />
                     </div>
-                    <span>My Projects</span>
+                    <span>Explore Projects</span>
                   </a>
                 </li>
                 <!--  -->
