--- a/freelancer/03-explore-project/freelance-explore-project-page.html
+++ b/freelancer/03-explore-project/freelance-explore-project-page.html
@@ -52,7 +52,7 @@ bdb = business dashboard;
                   <!-- role badge  -->
                   <div class="ms-2 ms-lg-0">
                     <span class="badge rounded-pill text-bg-warning">
-                      Business
+                      Freelancer
                     </span>
                   </div>
                 </div>
