--- a/freelancer/04-my-projects/freelance-my-project-page.html
+++ b/freelancer/04-my-projects/freelance-my-project-page.html
@@ -53,7 +53,7 @@ bdb = business dashboard;
                   <!-- role badge  -->
                   <div class="ms-2 ms-lg-0">
                     <span class="badge rounded-pill text-bg-warning">
-                      Business
+                      Freelnacer
                     </span>
                   </div>
                 </div>
