freelancer profile page done

--- a/business/13-contest/business-contest-details-page.html
+++ b/business/13-contest/business-contest-details-page.html
@@ -1727,7 +1727,7 @@ bdb = business dashboard;
                                 alt=""
                               />
                             </span>
-                            <button>Filters</button>
+                            <button class="p-0">Filters</button>
                           </div>
                         </div>
                         <!--  -->
