--- a/freelancer/01-onboarding/step-page-add-works.html
+++ b/freelancer/01-onboarding/step-page-add-works.html
@@ -47,36 +47,36 @@
                   data-bs-toggle="tooltip"
                   data-bs-title="Let’s gets started!"
                 >
-                  <span class="stepper-number"
-                    ><i class="fa-solid fa-check"></i
-                  ></span>
-                  <span class="stepper-title d-none d-lg-block"
-                    >Let’s gets started!</span
-                  >
+                  <span class="stepper-number">
+                    <i class="fa-solid fa-check"></i>
+                  </span>
+                  <span class="stepper-title d-none d-lg-block">
+                    Let’s gets started!
+                  </span>
                 </div>
                 <div
                   class="stepper-item completed"
                   data-bs-toggle="tooltip"
                   data-bs-title="Professional Experience"
                 >
-                  <span class="stepper-number"
-                    ><i class="fa-solid fa-check"></i
-                  ></span>
+                  <span class="stepper-number">
+                    <i class="fa-solid fa-check"></i>
+                  </span>
                   <span class="stepper-title d-none d-lg-block">
-                    Professional Experience</span
-                  >
+                    Professional Experience
+                  </span>
                 </div>
                 <div
                   class="stepper-item completed"
                   data-bs-toggle="tooltip"
                   data-bs-title="Skills and Preferences"
                 >
-                  <span class="stepper-number"
-                    ><i class="fa-solid fa-check"></i
-                  ></span>
-                  <span class="stepper-title d-none d-lg-block"
-                    >Skills and Preferences</span
-                  >
+                  <span class="stepper-number">
+                    <i class="fa-solid fa-check"></i>
+                  </span>
+                  <span class="stepper-title d-none d-lg-block">
+                    Skills and Preferences
+                  </span>
                 </div>
                 <div
                   class="stepper-item active"
@@ -84,9 +84,7 @@
                   data-bs-title="Add Works"
                 >
                   <span class="stepper-number">4</span>
-                  <span class="stepper-title d-none d-lg-block">
-                    Add Works</span
-                  >
+                  <span class="stepper-title d-none d-lg-block">Add Works</span>
                 </div>
                 <div
                   class="stepper-item"
@@ -95,9 +93,9 @@
                 >
                   <span></span>
                   <span class="stepper-number">5</span>
-                  <span class="stepper-title d-none d-lg-block"
-                    >Social profiles</span
-                  >
+                  <span class="stepper-title d-none d-lg-block">
+                    Social profiles
+                  </span>
                 </div>
               </div>
             </div>
@@ -144,9 +142,10 @@
             <div class="stepper-forms-section">
               <form action="">
                 <div class="mb-4">
-                  <label for="formFile" class="input-label"
-                    >Work 1 <span class="input-label-required">*</span></label
-                  >
+                  <label for="formFile" class="input-label">
+                    Work 1
+                    <span class="input-label-required">*</span>
+                  </label>
                   <div
                     class="alt-input-file rounded text-center position-relative overflow-hidden"
                   >
@@ -156,11 +155,11 @@
                     />
                     <p class="mb-0">
                       Drag and drop your files here or
-                      <a href=""> <strong>Browse</strong></a>
+                      <a href=""><strong>Browse</strong></a>
                     </p>
-                    <small
-                      >(support .png, .jpg, .jpeg Max.file size : 20MB )</small
-                    >
+                    <small>
+                      (support .png, .jpg, .jpeg Max.file size : 20MB )
+                    </small>
                     <input
                       type="file"
                       id="formFile"
@@ -169,8 +168,9 @@
                   </div>
                 </div>
                 <div class="mb-4">
-                  <label for="email" class="input-label"
-                    >Work name <span class="input-label-required">*</span>
+                  <label for="email" class="input-label">
+                    Work name
+                    <span class="input-label-required">*</span>
                   </label>
                   <input
                     type="email"
@@ -201,8 +201,8 @@
                 </div>
 
                 <div class="mb-2">
-                  <label for="description" class="input-label"
-                    >Description
+                  <label for="description" class="input-label">
+                    Description
                   </label>
 
                   <textarea
