project details 1 done

--- a/freelancer/07-project-details/project-started-business-details-page.html
+++ b/freelancer/07-project-details/project-started-business-details-page.html
@@ -1306,19 +1306,36 @@ bdb = business dashboard;
                         </div>
                       </div>
                     </div>
-                    <!-- if empty project   -->
-                    <div
-                      class="bg-alt-bg-clr rounded-3 py-5 w-100 text-center h-auto d-flex flex-column gap-4 align-items-center justify-content-center"
-                    >
-                      <img
-                        src="../../assets/images/business-project/empty-card.svg"
-                        alt=""
-                      />
-                      <p>
-                        Project milestones will appear here once you add
-                        <br />
-                        them to your agreement
-                      </p>
+
+                    <!-- tags section -->
+                    <div class="py-4 d-flex flex-wrap gap-3">
+                      <a
+                        href="./#"
+                        class="border border-light-subtle btn btn-lg fs-6"
+                      >
+                        More projects by WJ Studio
+                        <span class="ms-2">
+                          <i class="fa-solid fa-angle-right"></i>
+                        </span>
+                      </a>
+                      <a
+                        href="./#"
+                        class="border border-light-subtle btn btn-lg fs-6"
+                      >
+                        Similar projects
+                        <span class="ms-2">
+                          <i class="fa-solid fa-angle-right"></i>
+                        </span>
+                      </a>
+                      <a
+                        href="./#"
+                        class="border border-light-subtle btn btn-lg fs-6"
+                      >
+                        Projects in logo designing
+                        <span class="ms-2">
+                          <i class="fa-solid fa-angle-right"></i>
+                        </span>
+                      </a>
                     </div>
                   </div>
                 </div>
