--- a/freelancer/07-project-details/project-started-business-details-page-4.html
+++ b/freelancer/07-project-details/project-started-business-details-page-4.html
@@ -24,7 +24,7 @@ bdb = business dashboard;
 
     <!-- custom style sheet  -->
     <link rel="stylesheet" href="../../css/bisuness.dashboard.min.css" />
-    <title>Business project started business details page</title>
+    <title>Freelancers project details page</title>
   </head>
   <body class="tribe_page">
     <header class="alt_bdb_header">
@@ -61,7 +61,7 @@ bdb = business dashboard;
                   <!-- role badge  -->
                   <div class="ms-2 ms-lg-0">
                     <span class="badge rounded-pill text-bg-warning">
-                      Business
+                      Freelancer
                     </span>
                   </div>
                 </div>
@@ -1074,38 +1074,14 @@ bdb = business dashboard;
                           Logo designing for Apparel E-commerce
                         </h2>
                         <div class="tags py-3">
-                          <span class="alt-badge alt-agreement">Draft</span>
-                          <span class="alt-badge alt-dark">
-                            <span class="alt-dots alt-dots-green"></span>
-                            Publish project
-                          </span>
+                          <span class="alt-badge alt-agreement">Hiring</span>
                         </div>
                         <div class="mb-3">
-                          <button
-                            class="btn btn-alt-outline border-0 rounded-pill"
-                          >
+                          <button class="border-0 bg-transparent fs-4">
                             $100-500
                           </button>
                         </div>
-
-                        <div
-                          class="border-bottom d-flex gap-2 border-light-subtle pb-3"
-                        >
-                          <button
-                            class="evetn-page-btn"
-                            type="button"
-                            data-bs-target="#editInfo"
-                            data-bs-toggle="modal"
-                          >
-                            Edit project
-                          </button>
-                          <button
-                            class="evetn-page-btn bg-alt-primary border-0"
-                            type="button"
-                          >
-                            Publish
-                          </button>
-                        </div>
+                        <hr />
 
                         <div class="pb-3 pt-3">
                           <h5 class="p-font">Skills</h5>
@@ -1197,7 +1173,11 @@ bdb = business dashboard;
                             class="tribe_card_details d-flex gap-2 align-items-center mb-3"
                           >
                             <div class="">
-                              <h4 class="h-font text-white fs-5">Agreement</h4>
+                              <h4
+                                class="h-font text-white text-capitalize fs-5"
+                              >
+                                Agreement
+                              </h4>
                             </div>
                           </div>
                           <div class="d-flex gap-2 align-items-center">
@@ -1259,11 +1239,12 @@ bdb = business dashboard;
                             <div class="align-self-end ms-auto">
                               <button
                                 type="button"
-                                data-bs-toggle="modal"
-                                data-bs-target="#updateAgreement"
-                                class="alt-btn btn-alt-outline bg-alt-primary rounded-pill"
+                                class="alt-btn btn-alt-outline-dark d-flex align-items-center gap-2 text-white rounded-pill"
                               >
-                                Start Agreement
+                                <span>
+                                  <i class="fa-solid fa-clock-rotate-left"></i>
+                                </span>
+                                <span>Awaiting freelancer signature</span>
                               </button>
                             </div>
                           </div>
@@ -1387,333 +1368,6 @@ bdb = business dashboard;
     </main>
 
     <!-- add manageMembers modal end -->
-
-    <!-- edit info modal start -->
-
-    <div
-      class="modal fade"
-      id="editInfo"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="editInfo"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-dialog-centered modal-md" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="editInfo">Create a tribe</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <div class="">
-              <div class="mb-4">
-                <div
-                  class="alt-input-file py-5 rounded text-center position-relative overflow-hidden"
-                >
-                  <img
-                    src="../../assets/images/business-dashboard/tribe/create-tribe-modal-img.svg"
-                    alt=""
-                  />
-
-                  <input
-                    type="file"
-                    id="formFile"
-                    class="input-file-upload opacity-0 position-absolute w-100 h-100 top-0 start-0"
-                  />
-                </div>
-              </div>
-              <div class="mb-4">
-                <label for="tribe-title" class="input-label">
-                  What you wanna call your tribe?
-                  <span class="input-label-required">*</span>
-                </label>
-                <input
-                  type="text"
-                  class="input-field"
-                  id="tribe-title"
-                  placeholder="Signature Design Tribe"
-                />
-              </div>
-              <!-- select skills  -->
-              <div class="mb-4 skills_select_input">
-                <label class="input-label" for="add-tags">Tribe skills</label>
-
-                <select
-                  class="w-100 input-select"
-                  multiple
-                  data-placeholder="Select Tags"
-                  data-allow-clear="1"
-                  id="add-tags"
-                >
-                  <option>tribe skills 1</option>
-                  <option>tribe skills 2</option>
-                  <option>tribe skills 3</option>
-                  <option>tribe skills 4</option>
-                  <option>tribe skills 5</option>
-                  <option>tribe skills 6</option>
-                  <option>tribe skills 7</option>
-                </select>
-              </div>
-
-              <div class="mb-2">
-                <label for="description" class="input-label">Description</label>
-
-                <textarea
-                  class="input-field"
-                  placeholder="Eg: My responsibilities include"
-                  id="description"
-                  rows="3"
-                ></textarea>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn-alt-outline rounded-pill"
-              data-bs-dismiss="modal"
-            >
-              Cancel
-            </button>
-            <button
-              type="button"
-              data-bs-toggle="modal"
-              data-bs-target="#editInfo2"
-              class="btn-alt-outline bg-alt-primary rounded-pill"
-            >
-              Continue
-              <span class="ms-1"><i class="fa-solid fa-arrow-right"></i></span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- edit info modal 2  -->
-    <div
-      class="modal fade"
-      id="editInfo2"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="editInfo2title"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="editInfo2title">
-              Who else you want to be in Aufait tribe?
-            </h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <div class="">
-              <div class="flex-grow-1 position-relative tribe_search">
-                <span><i class="fa-solid fa-magnifying-glass"></i></span>
-                <input
-                  type="text"
-                  placeholder="Search for an existing member or add new using email id"
-                />
-              </div>
-              <!-- single check box -->
-              <div
-                class="d-flex justify-content-between align-items-center border-bottom border-light-subtle mb-2"
-              >
-                <div
-                  class="tribe_single_check_box d-flex align-items-center gap-2"
-                >
-                  <input
-                    class="form_check_input"
-                    type="checkbox"
-                    value=""
-                    id="check1"
-                  />
-                  <label class="form_check_label" for="check1">
-                    <div class="label_content d-flex align-items-center gap-2">
-                      <div class="avater_image_48">
-                        <img
-                          src="https://i.pravatar.cc/48"
-                          class="img-fluid"
-                          alt=""
-                        />
-                      </div>
-                      <div class="">
-                        <h5 class="mb-1">Logiology</h5>
-                        <div class="d-flex align-items-center flex-wrap gap-2">
-                          <p>Graphic Designer</p>
-                          <span class="dots"></span>
-                          <p>jamesjacobe@gmail.com</p>
-                        </div>
-                      </div>
-                    </div>
-                  </label>
-                </div>
-                <div class="">
-                  <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                </div>
-              </div>
-              <!-- single check box -->
-              <div
-                class="d-flex justify-content-between align-items-center border-bottom border-light-subtle mb-2"
-              >
-                <div
-                  class="tribe_single_check_box d-flex align-items-center gap-2"
-                >
-                  <input
-                    class="form_check_input"
-                    type="checkbox"
-                    value=""
-                    id="check2"
-                  />
-                  <label class="form_check_label" for="check2">
-                    <div class="label_content d-flex align-items-center gap-2">
-                      <div class="avater_image_48">
-                        <img
-                          src="https://i.pravatar.cc/48"
-                          class="img-fluid"
-                          alt=""
-                        />
-                      </div>
-                      <div class="">
-                        <h5 class="mb-1">Logiology</h5>
-                        <div class="d-flex align-items-center flex-wrap gap-2">
-                          <p>Graphic Designer</p>
-                          <span class="dots"></span>
-                          <p>jamesjacobe@gmail.com</p>
-                        </div>
-                      </div>
-                    </div>
-                  </label>
-                </div>
-                <div class="">
-                  <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                </div>
-              </div>
-              <!-- single check box -->
-              <div
-                class="d-flex justify-content-between align-items-center mb-2"
-              >
-                <div
-                  class="tribe_single_check_box d-flex align-items-center gap-2"
-                >
-                  <input
-                    class="form_check_input"
-                    type="checkbox"
-                    value=""
-                    id="check3"
-                  />
-                  <label class="form_check_label" for="check3">
-                    <div class="label_content d-flex align-items-center gap-2">
-                      <div class="avater_image_48">
-                        <img
-                          src="https://i.pravatar.cc/48"
-                          class="img-fluid"
-                          alt=""
-                        />
-                      </div>
-                      <div class="">
-                        <h5 class="mb-1">Logiology</h5>
-                        <div class="d-flex align-items-center flex-wrap gap-2">
-                          <p>Graphic Designer</p>
-                          <span class="dots"></span>
-                          <p>jamesjacobe@gmail.com</p>
-                        </div>
-                      </div>
-                    </div>
-                  </label>
-                </div>
-                <div class="">
-                  <span><i class="fa-solid fa-ellipsis-vertical"></i></span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn-alt-outline rounded-pill"
-              data-bs-dismiss="modal"
-            >
-              Copy invite link
-            </button>
-            <button
-              type="button"
-              class="btn-alt-outline bg-alt-primary rounded-pill"
-            >
-              Send invite
-              <span class="ms-1"><i class="fa-solid fa-arrow-right"></i></span>
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- edit info modal end -->
-
-    <!-- publish project modal -->
-    <div
-      class="modal fade"
-      id="publishProject"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="modalTitleId"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button
-              type="button"
-              class="btn-close text-black"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-              <div
-                class="rounded-3 py-5 w-100 text-center h-auto d-flex flex-column gap-4 align-items-center justify-content-center"
-              >
-                <img
-                  src="../../assets/images/business-project/project-publish-modal-img.svg"
-                  alt=""
-                />
-                <h2 class="fs-3">Project posted successfully!</h2>
-                <p>
-                  You’re one step closer to achieving your vision! Start
-                  inviting freelancers now.
-                </p>
-                <div class="d-flex gap-3">
-                  <button
-                    type="button"
-                    aria-expanded="false"
-                    class="alt-btn btn-alt-outline rounded-pill"
-                  >
-                    Done
-                  </button>
-                  <button
-                    type="button"
-                    aria-expanded="false"
-                    class="alt-btn btn-alt-outline bg-alt-primary rounded-pill"
-                  >
-                    Explore freelancers
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <script src="../../assets/vendor/js/bootstrap.bundle.min.js"></script>
     <script src="../../assets/vendor/js/jquery-3.5.1.slim.min.js"></script>
