business page done

--- a/freelancer/10-settings/Freelance-setting-page.html
+++ b/freelancer/10-settings/Freelance-setting-page.html
@@ -1365,6 +1365,41 @@ bdb = business dashboard;
                       <h3>My documents</h3>
                       <div class="business_account_details rounded-0">
                         <div class="">
+                          <label
+                            for="my-document"
+                            class="btn d-flex align-self-center justify-content-between text-start w-100 h-100"
+                          >
+                            <div class="">
+                              <h4>Visual Verification</h4>
+                              <p>Only JPEG and PDFS are accepted</p>
+                            </div>
+                            <div
+                              class="my-pdf-document position-relative p-2 rounded-1 d-flex align-items-start gap-2"
+                              style="background-color: #ecedf0; width: 212px"
+                            >
+                              <img
+                                class="img-fluid rounded-1 flex-shrink-0"
+                                src="../../assets/images/freelance-dashboard/icons/my-document-pdf.svg"
+                                alt=""
+                              />
+                              <div class="">
+                                <h4>Aadhar.pdf</h4>
+                                <p class="mb-0">1.2MB</p>
+                              </div>
+                              <input
+                                type="radio"
+                                class="card_input"
+                                id="my-document"
+                                autocomplete="off"
+                              />
+                            </div>
+                          </label>
+                        </div>
+                      </div>
+                      <div
+                        class="business_account_details border-top border-secondary-subtle rounded-0"
+                      >
+                        <div class="">
                           <h4>Location Verification</h4>
                           <p>Only JPEG and PDFS are accepted</p>
                         </div>
@@ -1704,7 +1739,9 @@ bdb = business dashboard;
                           </div>
                           <div class="col-12">
                             <div class="d-flex flex-column gap-2">
-                              <div class="d-flex align-items-center gap-2">
+                              <div
+                                class="d-flex pb-2 align-items-center border-bottom border-light-subtle gap-2"
+                              >
                                 <img
                                   src="https://i.pravatar.cc/42"
                                   class="rounded-circle bg-secondary flex-shrink-0"
@@ -1725,7 +1762,9 @@ bdb = business dashboard;
                                   <span>Accepted</span>
                                 </div>
                               </div>
-                              <div class="d-flex align-items-center gap-2">
+                              <div
+                                class="d-flex pb-2 align-items-center border-bottom border-light-subtle gap-2"
+                              >
                                 <img
                                   src="https://i.pravatar.cc/42"
                                   class="rounded-circle bg-secondary flex-shrink-0"
